--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.spin.secure">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".SpinApp"
         android:allowBackup="false"
